--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 gutenberg_cleaner
-spacy
+spacy==3.0.6
 pandas 
 numpy
 benepar
@@ -7,9 +7,10 @@ tqdm
 joblib
 regex
 nltk
-inflect
+inflect==5.6.0
 gdown
 transformers
 tokenizers
 torch
 seaborn
+protobuf==3.20.* # =3.14.0
