--- a/src/irnlm/models/gpt2/templates/lm_template4_semantic_context-full.yml
+++ b/src/irnlm/models/gpt2/templates/lm_template4_semantic_context-full.yml
@@ -11,8 +11,8 @@
 # General
 task: language-modeling # Task on which to fine-tune the model ['POS-tagging', 'NER', 'sentiment-analysis', 'sentence-classification', 'mask-language-modeling]
 seed: 1111 # Seed for reproductibility
-output_dir: /neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/derivatives/fMRI/models/english/GPT-2/GPT-2_L-4_H-768_default_tokenizer_full
-log_file: logs_validation.txt
+output_dir: /neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/derivatives/fMRI/models/english/GPT-2/GPT-2_L-4_H-768_semantic_context-full
+log_file: logs_training.txt
 local_rank: -1
 do_test: True
 do_train: True
@@ -21,10 +21,10 @@ metric_name: classification
 
 # Datasets
 dataset_name: 'gpt2_'
-extra: 'default-tokenizer_'
+extra: 'semantic_'
 dataset_dir: "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/english/all_training" # Path/URL to the folder containing the dataset to use for fine-tuning
 use_output_mask: False # for token classification
-nb_splits: 5 #10 for french
+nb_splits: 5
 
 # Data Loader
 train_size_percentage: 0.9
@@ -32,30 +32,18 @@ batch_size: 32
 batch_size_eval: 64
 
 # Model & Tokenizer
-model_type: integral
 pretrained_model: gpt2 # Name of (or path to) the pre-trained BERT model to use
 pretrained_tokenizer: gpt2 # Name of (or path to) the pre-trained BERT tokenizer to use
 config_path: "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/models/english/gpt2_L-4_H-768_A-12/config.json"
-tokenizer_training_data_paths: 
-  - "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/english/all_training/gpt2_train.txt"
-  - "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/english/all_training/gpt2_test.txt"
-  - "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/english/all_training/gpt2_dev.txt"
-tokenizer_special_tokens:
-  - "<s>" # "[CLS]"
-  - "<pad>" # "[PAD]"
-  - "</s>" # "[SEP]"
-  - "<unk>" # "[UNK]"
-  - "<mask>" # "[MASK]"
-tokenizer_path: "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/french/training_data/"
 output_attentions: True
 output_hidden_states: True
 max_length: 512
 masking_proportion: 15
 start_from_scratch: True
 strip_accents: True
-tokenizer_from_scratch: True
+tokenizer_from_scratch: False
 lowercase: True
-vocab_size: 50000
+vocab_size: 50001
 min_frequency: 2
 limit_alphabet: 1000
 context_size: 507
@@ -69,7 +57,7 @@ adam_epsilon: 1e-8 # Adam_epsilon  - default is 1e-8.
 num_warmup_steps: 0 # Default value in run_glue.py
 
 # Training
-nb_epochs: 3 # BERT authors recommended between 2 and 4
+nb_epochs: 5 # BERT authors recommended between 2 and 4
 nb_checkpoints: 30 # number of checkpoints at which to save model state
 start_epoch: 0
 init_checkpoints: 1
