--- a/src/irnlm/models/gpt2/templates/lm_template4_integral.yml
+++ b/src/irnlm/models/gpt2/templates/lm_template4_integral.yml
@@ -12,7 +12,7 @@
 task: language-modeling # Task on which to fine-tune the model ['POS-tagging', 'NER', 'sentiment-analysis', 'sentence-classification', 'mask-language-modeling]
 seed: 1111 # Seed for reproductibility
 output_dir: /neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/derivatives/fMRI/models/french/irnlm/GPT-2/GPT-2_L-4_H-768_integral
-log_file: logs_training.txt
+log_file: logs_training.log
 local_rank: -1
 do_test: True
 do_train: True
