--- a/src/irnlm/models/gpt2/templates/lm_template4_integral_context-15.yml
+++ b/src/irnlm/models/gpt2/templates/lm_template4_integral_context-15.yml
@@ -11,8 +11,8 @@
 # General
 task: language-modeling # Task on which to fine-tune the model ['POS-tagging', 'NER', 'sentiment-analysis', 'sentence-classification', 'mask-language-modeling]
 seed: 1111 # Seed for reproductibility
-output_dir: /neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/derivatives/fMRI/models/french/irnlm/GPT-2/GPT-2_L-4_H-768_integral
-log_file: logs_validation.txt
+output_dir: /neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/derivatives/fMRI/models/french/irnlm/GPT-2/GPT-2_L-4_H-768_integral_context-15
+log_file: logs_validation.log
 local_rank: -1
 do_test: True
 do_train: True
@@ -20,16 +20,14 @@ do_validation: True
 metric_name: classification
 
 # Datasets
-dataset_name: 'CC100_integral_' # 'gpt2_'
-extra: '' # 'default-tokenizer_'
 dataset_dir: "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/french/training_data" #english/all_training" # Path/URL to the folder containing the dataset to use for fine-tuning
 use_output_mask: False # for token classification
 nb_splits: 10 #5 for french
 
 # Data Loader
 train_size_percentage: 0.9
-batch_size: 32
-batch_size_eval: 64
+batch_size: 1024
+batch_size_eval: 256
 
 # Model & Tokenizer
 model_type: integral
@@ -71,7 +69,7 @@ test_paths:
   - /neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/french/training_data/CC100_integral_test_split-0.pkl #training_data.011
 output_attentions: True
 output_hidden_states: True
-max_length: 512
+max_length: 19
 masking_proportion: 15
 start_from_scratch: True
 strip_accents: True
@@ -80,7 +78,7 @@ lowercase: True
 vocab_size: 50000
 min_frequency: 2
 limit_alphabet: 1000
-context_size: 507
+context_size: 15
 device_map:
 
 # Optimizer
