modify train syntactic model

--- a/src/irnlm/models/gpt2/templates/lm_template4_syntactic.yml
+++ b/src/irnlm/models/gpt2/templates/lm_template4_syntactic.yml
@@ -34,16 +34,16 @@ pretrained_model: # gpt2 # Name of (or path to) the pre-trained BERT model to us
 pretrained_tokenizer: # gpt2 # Name of (or path to) the pre-trained BERT tokenizer to use
 config_path: "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/Information-Restrited-NLMs/src/irnlm/models/gpt2/configs/gpt2_L-4_H-768_A-12_syntactic/config.json"
 tokenizer_training_data_paths:
-  - "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/french/training_data/training_data.000"
-  - "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/french/training_data/training_data.001"
-  - "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/french/training_data/training_data.002"
-  - "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/french/training_data/training_data.003"
-  - "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/french/training_data/training_data.004"
-  - "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/french/training_data/training_data.005"
-  - "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/french/training_data/training_data.006"
-  - "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/french/training_data/training_data.007"
-  - "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/french/training_data/training_data.008"
-  - "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/french/training_data/training_data.009"
+  - "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/french/training_data/CC100_syntactic_train_split-0.txt"
+  - "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/french/training_data/CC100_syntactic_train_split-1.txt"
+  - "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/french/training_data/CC100_syntactic_train_split-2.txt"
+  - "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/french/training_data/CC100_syntactic_train_split-3.txt"
+  - "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/french/training_data/CC100_syntactic_train_split-4.txt"
+  - "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/french/training_data/CC100_syntactic_train_split-5.txt"
+  - "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/french/training_data/CC100_syntactic_train_split-6.txt"
+  - "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/french/training_data/CC100_syntactic_train_split-7.txt"
+  - "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/french/training_data/CC100_syntactic_train_split-8.txt"
+  - "/neurospin/unicog/protocols/IRMf/LePetitPrince_Pallier_2018/LePetitPrince/data/text/french/training_data/CC100_syntactic_train_split-9.txt"
 tokenizer_special_tokens:
   - "<pad>" # "[PAD]"
   - "<s>" # "[CLS]"
